--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,15 @@
 
         </dependency>
 
+
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.3m</version>
+        </dependency>
+
+
+
     </dependencies>
 
     <build>
